# Air-Ground-Operation-System

./: A-star-uart.py  A_star_test.py  A_star_uart_v1.py  A_star_v2.py  CHANGELOG.md  CMakeLists.txt  NLink_LinkTrack_Node_Frame2_20240710_192226.xlsx  README.md  move_along_path.py  package.xml  serial_test_pi.py  text_transfer.txt  uwb_filter_test.py  uwb_kalman.py
config/: CUADC.rviz  config.yaml  find_object_2d.ini  ros.yaml  uav_control_indoor.yaml  yolov2-CUADC.cfg  yolov2-CUADC.yaml  yolov2-tiny.yaml  yolov3.yaml  yolov4.yaml
include/: fsm.h  mission_utils.h
launch/: control_p450_indoor.launch  darknet_ros.launch  find_object_2d.launch  simu_p450.launch  visual_infer.launch
src/: autonomous_landing.cpp  cuadc_node.cpp  fsm.cpp  main_node.cpp
