<?xml version="1.0"?>
<package format="2">
  <name>cuadc</name>
  <version>0.2.5</version>
  <description>
    CUADC '24
  </description>
  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/wallfacer1018/Air-Ground-Operation-System</url>
  <author email="12010508@mail.sustech.edu.cn">Eason Hua</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mavros_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>actionlib</depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>darknet_ros</depend>
  <depend>easondrone_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
