<?xml version="1.0"?>
<package format="2">
  <name>cuadc</name>
  <version>0.3.1</version>
  <description>
    CUADC '24
  </description>
  <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/wallfacer1018/Air-Ground-Operation-System</url>
  <author email="12010508@mail.sustech.edu.cn">Eason Hua</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mavros_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>actionlib</depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>darknet_ros</depend>
  <depend>easondrone_msgs</depend>
  <depend>std_msgs</depend>
</package>
